--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@ Following these steps to use this tool:
 
 1. clone the repository.
 2. run the following command under the clone directory:
-#+begin_src shell :exports source
+#+begin_src shell :exports code
 ./cook.sh <the directory where the project will be put> <the name of the project>
 #+end_src
 3. follow the prompt of the screen til everything is done.
