--- a/README.org
+++ b/README.org
@@ -23,6 +23,6 @@ Following these steps to use this tool:
 1. clone the repository.
 2. run the following command under the clone directory:
    #+begin_verse
-./cook.sh <the directory where the project will be put> <the name of the project>
+~./cook.sh <the directory where the project will be put> <the name of the project>~
    #+end_verse
 3. follow the prompt of the screen til everything is done.
