--- a/README.org
+++ b/README.org
@@ -5,19 +5,20 @@
 #+DATE: 2020-12-18
 #+OPTIONS: ^:{} toc:3
 
-This is a tool which can help you generate a haskell project with the haskell.nix as the build framework.
+This is a tool which can help you quickly generate a haskell project with the ~nix~ and ~haskell.nix~ as the build framework.
 
 * Features
 
 This tool has following features at this moment:
 - install nix if needed
 - multiple platforms supported(currently ~linux~ and ~macos~ are supported, ~windows~ with ~WSL~ may work but not tested)
-- generate haskell project with the summoner tool
+- generate haskell project from scratch with the ~summoner~ tool
 - generate most usable nix files, including:
   - default.nix :: this is the major nix file which is used by all other nix files.
   - shell.nix :: to setup a development environment with nix-shell
   - cross-build.nix :: this nix expression can be used to build cross platform targets, including fully static binary linked with musl library
   - docker.nix :: this file can be used to build a docker image for the project
+  - tarball.nix :: this file can be used to tar up as a tarball for the project
 - create project based on existing project templates with ~rob~
   - currently there is only one existing template ~nixos2105-ghc884-indexstate20210718-haskell.nix~
   - very easy to add new project template with new build infrastructure
