--- a/README.org
+++ b/README.org
@@ -5,22 +5,24 @@
 #+DATE: 2020-12-18
 #+OPTIONS: ^:{} toc:3
 
-This is a tool which can help you quickly generate a haskell project with the ~nix~ and ~haskell.nix~ as the build framework.
+This is a tool which can help you quickly generate a haskell project with the [[https://nixos.org][~nix~]] and [[https://github.com/input-output-hk/haskell.nix][~haskell.nix~]] as the build framework.
 
 * Features
 
 This tool has following features at this moment:
-- install nix if needed
+- install ~nix~ if needed
 - multiple platforms supported(currently ~linux~ and ~macos~ are supported, ~windows~ with ~WSL~ may work but not tested)
-- generate haskell project from scratch with the ~summoner~ tool
+- generate haskell project from scratch with the [[https://github.com/kowainik/summoner][~summoner~]] tool
 - generate most usable nix files, including:
   - default.nix :: this is the major nix file which is used by all other nix files.
   - shell.nix :: to setup a development environment with nix-shell
   - cross-build.nix :: this nix expression can be used to build cross platform targets, including fully static binary linked with musl library
   - docker.nix :: this file can be used to build a docker image for the project
-  - tarball.nix :: this file can be used to tar up as a tarball for the project
-- create project based on existing project templates with ~rob~
-  - currently there is only one existing template ~nixos2105-ghc884-indexstate20210718-haskell.nix~
+  - tarball.nix :: this file can be used to tar up the executable and its dependencies as a tarball for the project
+- create project based on existing project templates with [[https://github.com/GianlucaGuarini/rob][~rob~]]
+  - currently there are two existing templates
+    - ~nixos2105-ghc884-indexstate20210718-haskell.nix~
+    - ~nixos2105-ghc8107-haskell.nix~
   - very easy to add new project template with new build infrastructure
 
 * Usage
@@ -53,22 +55,23 @@ This tool generates the ready to go build framework for the generated project wi
 - It pinned the ~haskell.nix~ version to the current date with the ~niv~ tool
 - It uses the ~nixpkgs~ source from the ~haskell.nix~ within the ~default.nix~ file and set the ~nixpkgs~ version to the latest stable nix channel
 - It sets the ~ghc~ version to the default one from the latest stable nix channel
-- It sets the ~index-state~ for the project within the ~default.nix~ to the current date
+- It sets the ~index-state~ for the project within the ~default.nix~ to the one of the ~haskell.nix~ internal index state
 - It generate a ~shell.nix~ file with following features:
   + With the ~hoogle~ tool enabled
-  + With ~cabal~ and ~hlint~ enabled and set their versions to the default one of the latest stable ~nix~ channel
+  + With ~cabal~, ~hasktages~ and ~haskell-language-server~ enabled and set their versions to the default one of the latest stable ~nix~ channel
   + You can optionally enable other tools, like ~ghcid~, ~niv~ or ~lorri~, just check the ~shell.nix~ file
 - It generate the ~cross-build.nix~ file which will build the fully static binary linked with ~musl~ library by default. If you would like to cross build for other platforms, check the =nix/cross-build/systems.nix= and comment out for which platforms you want
 - It also generates a ~docker.nix~ file which can be used to build a docker image
+- It also generates a ~tarball.nix~ file which can be used to build a tarball file
 - It also comes with overlay support. If you want to override some packages within the ~hackage~ database, you can add a ~nix~ file for this package under the directory =nix/overlay= and it will be picked up automatically.
 
 * Setup development environment
 
 Besides the ~shell.nix~, this tool also generates some other files to help you quick start the development:
-- The tool assumes you will use ~emacs~ with ~haskell-mode~ and ~dante~ combination as the development environment. If you use other tools, you need to figure out how to setup the development environment yourself.
-- The tool will generate a ~cabal.project~ file with the ~index-state~ set to the current date.
-- The tool will generate a ~cabal.project.local~ to make sure the ~dante~ will use the new style cabal commands.
-- The tool will also generate a ~.dir-locals.el~ and set the ~dante~ target to the executable of the project name.
+- The tool assumes you will use ~emacs~ with ~haskell-mode~ and ~lsp~ combination as the development environment. If you use other tools, you need to figure out how to setup the development environment yourself.
+- The tool will generate a ~cabal.project~ file with the ~index-state~ set to the one of the ~haskell.nix~ internal index state.
+- The tool will generate a ~cabal.project.local~ to make sure the haskell tools will use the new style cabal commands.
+- The tool will also generate a ~.dir-locals.el~ and set the ~HLS~ executable path.
 
 With above files in place, you can just run the =nix-shell= under the project directory to enter a ~nix-shell~ and start ~emacs~ within the ~nix-shell~ and start to code.
 
