--- a/README.org
+++ b/README.org
@@ -5,25 +5,39 @@
 #+DATE: 2020-12-18
 #+OPTIONS: ^:{} toc:3
 
-This is a tool which can help you quickly generate a haskell project with the [[https://nixos.org][~nix~]] and [[https://github.com/input-output-hk/haskell.nix][~haskell.nix~]] as the build framework.
+This is a tool which can help you quickly generate a haskell project based on best practice to structure your program and with the [[https://nixos.org][~nix~]] and [[https://github.com/input-output-hk/haskell.nix][~haskell.nix~]] as the build framework and ~docker~, ~docker-compose~ and ~arion-compose~ as the deployment framework.
+
+* Motivation
+
+We want to write code as quickly as possible when we build an application. however, the reality is that we need to build the application and deploy it for testing. Without the build and deploy, we can't test it. And without testing, we don't know if our application works as expected. So we need to put a lot of effort to make our application build and deploy for testing. fortunately, we can reduce the effort by generating the build and deploy infrastructure for our application. On the other hand, our application need to follow some best practice to structure our source code for maintenance. And this can also achieve by generating project based on a template.
+
+Based on the above, I create this project generator to quickly cook a project if I want to build a haskell application.
 
 * Features
 
 This tool has following features at this moment:
-- install ~nix~ if needed
+- install ~nix~, ~docker~, ~docker-compose~ if needed
 - multiple platforms supported(currently ~linux~ and ~macos~ are supported, ~windows~ with ~WSL~ may work but not tested)
-- generate haskell project from scratch with the [[https://github.com/kowainik/summoner][~summoner~]] tool
+- create project based on existing project templates with [[https://github.com/GianlucaGuarini/rob][~rob~]]
+  - currently there are one existing templates
+    - ~nixos2111-ghc8107-haskell.nix~
+  - very easy to add new project template with new build infrastructure
 - generate most usable nix files, including:
   - default.nix :: this is the major nix file which is used by all other nix files.
   - shell.nix :: to setup a development environment with nix-shell
   - cross-build.nix :: this nix expression can be used to build cross platform targets, including fully static binary linked with musl library
   - docker.nix :: this file can be used to build a docker image for the project
   - tarball.nix :: this file can be used to tar up the executable and its dependencies as a tarball for the project
-- create project based on existing project templates with [[https://github.com/GianlucaGuarini/rob][~rob~]]
-  - currently there are two existing templates
-    - ~nixos2105-ghc884-indexstate20210718-haskell.nix~
-    - ~nixos2105-ghc8107-haskell.nix~
-  - very easy to add new project template with new build infrastructure
+  - arioin-pkgs.nix :: this file can be used to define the package set for ~arion-compose~ to build the container
+  - arion-compose.nix :: this file can be used to compose services by ~arion-compose~ and orchestrate these services as ~docker-compose~
+  - build :: use this script to build the project
+  - deploy :: use this script to deploy the project
+  - develop :: use this script to start development of the project
+  - arion :: the utility to check the deployment status
+- ready to be built project, just type ~build~ and you can get the project executable
+- ready to be deployed project, just type ~deploy~ and your project will be deployed as ~docker~ container
+- buildable source code stub following the ~three layer cake~ pattern practice
+- nixify existing projects, i.e., make existing projects build and deploy using this build and deploy framework
 
 * Usage
 
@@ -75,8 +89,20 @@ Besides the ~shell.nix~, this tool also generates some other files to help you q
 
 With above files in place, you can just run the =nix-shell= under the project directory to enter a ~nix-shell~ and start ~emacs~ within the ~nix-shell~ and start to code.
 
+* Build
+
+TO BE WRITTEN
+
+* Deploy
+
+TO BE WRITTEN
+
+* Nixify existing projects
+
+TO BE WRITTEN
+
 * Todos
 
 Following are the incomplete list of the features I want to implement in near future:
-- Add github action CI support based on ~haskell.nix~
+- Add github action CI support based on ~haskell.nix~ DONE
 - Add more project templates
