integrate deploy-packer and refactor full-system template.

--- a/project-scaffold-template/full-system-nixos2111-ghc8107/README.org
+++ b/project-scaffold-template/full-system-nixos2111-ghc8107/README.org
@@ -2,4 +2,4 @@
 
 * What
 
-This is the mono repository for the java dump and GC analzyer application.
+This is the mono repository for a haskell-based application.
