--- a/README.org
+++ b/README.org
@@ -5,11 +5,14 @@
 #+DATE: 2020-12-18
 #+OPTIONS: ^:{} toc:3
 
-This is a tool which can help you quickly generate a haskell project based on best practice to structure your program and with the [[https://nixos.org][nix]] and [[https://github.com/input-output-hk/haskell.nix][haskell.nix]] as the build framework and [[https://docker.io][docker]], [[https://docs.docker.com/compose][docker-compose]] and [[https://github.com/hercules-ci/arion][arion-compose]] as the deployment framework.
+This is a tool which can help you quickly generate a haskell project based on best practice to structure your program and with the [[https://nixos.org][nix]] and [[https://github.com/input-output-hk/haskell.nix][haskell.nix]] as the build framework and [[https://docker.io][docker]], [[https://docs.docker.com/compose][docker-compose,]] [[https://github.com/hercules-ci/arion][arion-compose]]] and my own [[https://github.com/hughjfchen/deploy-packer][deploy-packer]] as the deployment framework.
 
 * Motivation
 
 We want to write code as quickly as possible when we build an application. However, the reality is that we need to build the application and deploy it for testing. Without the build and deploy, we can't test it(even for unit testing). And without testing, we don't know if our application works as expected. So we need to put a lot of effort to make our application build and deploy for testing. Fortunately, we can reduce the effort by generating the build and deploy infrastructure for our application. Furthermore, our application need to follow some best practice to structure our source code for maintenance. And this can also achieve by generating project based on a template.
+
+Also, you may want to nixify an existing haskell project, i.e., build the existing haskell project based on the ~nix~ infrastructure because you want to be
+able to reproduceablely build the project for a long time so that you can focus on development.
 
 Based on the above consideration, I create this project generator to quickly cook a project if I want to build a haskell application.
 
@@ -18,10 +21,11 @@ Based on the above consideration, I create this project generator to quickly coo
 This tool has following features at this moment:
 - install build and deploy dependencies, including ~nix~, ~docker~, ~docker-compose~ if needed
 - multiple platforms supported(currently ~linux~ and ~macos~ are supported, ~windows~ with ~WSL~ may work but not tested)
-- generate project based on the tool ~summon~(*deprecated*, will be removed eventually)
+- generate project based on the tool ~summon~ (*deprecated*, will be removed eventually)
 - create project based on existing project templates with [[https://github.com/GianlucaGuarini/rob][rob]]
   - currently there are one existing templates
     - ~nixos2111-ghc8107-haskell.nix~
+    - ~full-system-nixos2111-ghc8107~
   - new template will be added following the tools(~nix~ and ~haskell.nix~) update
   - very easy to add new project template with new build infrastructure
 - generate most usable nix files for build and deploy, including:
@@ -30,6 +34,8 @@ This tool has following features at this moment:
   - cross-build.nix :: this nix expression can be used to build cross platform targets, including fully static binary linked with musl library
   - docker.nix :: this file can be used to build a docker image for the project
   - tarball.nix :: this file can be used to tar up the executable and its dependencies as a tarball for the project
+  - release.nix :: this file can be used to pack up the executable, its configuration and its dependencies as a self-extractable tarball for the project
+    and ship to the deployment target machine directly. This uses my own [[https://github.com/hughjfchen/deploy-packer][deploy-packer]]
   - arioin-pkgs.nix :: this file can be used to define the package set for ~arion-compose~ to build the container
   - arion-compose.nix :: this file can be used to compose services by ~arion-compose~ and orchestrate these services as ~docker-compose~
   - build :: use this script to build the project
@@ -114,7 +120,7 @@ Besides the ~shell.nix~, this tool also generates some other files to help you q
 - The tool will generate a ~cabal.project.local~ to make sure the haskell tools will use the new style cabal commands.
 - The tool will also generate a ~.dir-locals.el~ and set the ~HLS~ executable path.
 
-With above files in place, you can just run the =nix-shell= under the project directory to enter a ~nix-shell~ and start ~emacs~ within the ~nix-shell~ and start to code.
+With above files in place, you can just run the ~develop~ under the project directory to enter a ~nix-shell~ and start ~emacs~ within the ~nix-shell~ and start to code.
 
 * Build
 
